fixed media page

--- a/dev/html/in-de-media.html
+++ b/dev/html/in-de-media.html
@@ -1,21 +1,158 @@
 @@include('inc/head.html')
 @@include('components/header.html')
 
-<main class="media">
+<main class="in-de-media clearfix">
 	<header class="media__header">
 		<h1>Mijns in de media</h1>
 	</header>
 	
-	<section class="container">
+	<section class="media_statics container">
+		<div class="row">
+			<div class="col-md-6">
+				<img src="assets/images/thumb.jpg" />
+			</div>
+			<div class="media__numbers col-md-6">
+				<ul>
+					<li>Schrift<span>48</span></li>
+					<li>Radio/TV<span>12</span></li>
+				</ul>
+				<p>Edwin Mijnsbergen Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, soluta, doloribus! Magnam laborum aspernatur consequuntur aliquam consectetur, veritatis accusamus amet numquam aut, a commodi! Harum cupiditate omnis porro dignissimos molestiae.</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="container media__items">
+		<h2>Media</h2>
 		<table class="media__table">
 			<thead>
-				<th>Jaar</th>
-				<th>Type</th>
-				<th>Organisatie</th>
-				<th>Beschrijving</th>
+				<tr>
+					<th>Jaar</th>
+					<th>Type</th>
+					<th>Organisatie</th>
+					<th>Beschrijving</th>
+				</tr>
 			</thead>
 			<tbody>
-				<tr></tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
 			</tbody>
 		</table>
 	</section>
