Over pagina gemaakt en footer aangepast

--- a/dev/html/inc/footer.html
+++ b/dev/html/inc/footer.html
@@ -19,10 +19,20 @@
 			    	<section class="col-md-3 footer__section">
 			    		<h2 class="footer__title">Info</h2>
 			    	</section>
-			    	<section class="col-md-6 footer__section">
+			    	<section class="col-md-3 footer__section">
 			    		<h2 class="footer__title">Contact</h2>
 			    		<ul>
-							<li>emijnsbergen@gmail.com</li>
+							<li><a href="#">emijnsbergen@gmail.com</a></li>
+			    		</ul>
+			    	</section>
+			    	<section class="col-md-3 footer__section">
+			    		<h2 class="footer__title">Ed elders</h2>
+			    		<ul>
+			    			<li><a href="#">Wij zijn de stad</a></li>
+			    			<li><a href="#">Middelburg Dronk</a></li>
+			    			<li><a href="#">Veere Dronk</a></li>
+			    			<li><a href="#">Bibliotheek 2.0</a></li>
+			    			<li></li>
 			    		</ul>
 			    	</section>
 		    	</div>
