--- a/dev/html/over-mij.html
+++ b/dev/html/over-mij.html
@@ -1,7 +1,7 @@
 @@include('inc/head.html')
 @@include('components/header.html')
 
-<main class="in-de-media clearfix">
+<main class="over-mij clearfix">
 	<header class="media__header">
 		<h1>Over Mijns</h1>
 	</header>
