--- a/dev/html/contact.html
+++ b/dev/html/contact.html
@@ -2,13 +2,27 @@
 @@include('components/header.html')
 
 <main class="contact clearfix">
-	<header class="media__header">
-		<h1>Contact</h1>
-	</header>
-	
-	<section class="media_statics container">
+	<section class="contact__container container">
 		<div class="row">
-			<div class="media__numbers col-md-10">
+			<div class="contact col-md-8">
+				<h1>Contact</h1>
+				<ul>
+					<li><a href="#">edwinmijnsbergen@gmail.com</a></li>
+					<li>M.I Webwerk KvK: 20148304</li>
+				</ul>
+			</div>
+			<div class="social col-md-4">
+				<h1>Social</h1>
+				<ul>
+					<li><a href="#"><i class="material-icons">chevron_right</i>Facebook</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>Twitter</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>LinkedIn</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>Google+</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>Tumblr</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>Flickr</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>Instagram</a></li>
+					<li><a href="#"><i class="material-icons">chevron_right</i>RSS</a></li>
+				</ul>
 			</div>
 		</div>
 	</section>
