added sidebar to homepage

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -2,7 +2,7 @@
 @@include('components/header.html')
 <main class="container">
 	<div class="row">
-		<section class="articles col-md-8 col-md-offset-2">
+		<section class="articles col-md-8">
 			<article class="article">
 				<a class="article__image" href="/article.html">
 					<img src="/assets/images/iceland1.jpg" />
@@ -61,6 +61,8 @@
 				</div>
 			</article>
 		</section>
+
+		@@include('components/sidebar.html')
 	</div>
 </main>
 @@include('inc/footer.html')
