--- a/dev/html/contact.html
+++ b/dev/html/contact.html
@@ -1,7 +1,7 @@
 @@include('inc/head.html')
 @@include('components/header.html')
 
-<main class="contact clearfix">
+<main class="contact__page clearfix">
 	<section class="contact__container container">
 		<div class="row">
 			<div class="contact col-md-8">
@@ -21,7 +21,6 @@
 					<li><a href="#"><i class="material-icons">chevron_right</i>Tumblr</a></li>
 					<li><a href="#"><i class="material-icons">chevron_right</i>Flickr</a></li>
 					<li><a href="#"><i class="material-icons">chevron_right</i>Instagram</a></li>
-					<li><a href="#"><i class="material-icons">chevron_right</i>RSS</a></li>
 				</ul>
 			</div>
 		</div>
