--- a/dev/html/contact.html
+++ b/dev/html/contact.html
@@ -6,9 +6,12 @@
 		<div class="row">
 			<div class="contact col-md-8">
 				<h1>Contact</h1>
-				<ul>
+				<ul class="contact__information">
 					<li><a href="#">edwinmijnsbergen@gmail.com</a></li>
-					<li>M.I Webwerk KvK: 20148304</li>
+				</ul>
+				<ul class="contact__metadata">
+					<li>M.I Webwerk</li>
+					<li>KvK: 20148304</li>
 				</ul>
 			</div>
 			<div class="social col-md-4">
