portfolio pagina aan t maken

--- a/dev/html/portfolio.html
+++ b/dev/html/portfolio.html
@@ -3,12 +3,24 @@
 
 <main class="portfolio clearfix">
 	<header class="media__header">
-		<h1>Portfolio</h1>
+		<h1>Meer dan 100 opdrachten. Meer dan 100 verhalen.</h1>
 	</header>
 	
-	<section class="media_statics container">
+	<section class="portfolio__container container">
 		<div class="row">
-			<div class="media__numbers col-md-10">
+			<header class="portfolio__year">
+				<h1>2015</h1>
+			</header>
+			<div class="portfolio__item__container">
+				<div class="portfolio__item col-md-4">
+					<img src="assets/images/ccxl.png" />
+				</div>
+				<div class="portfolio__item col-md-4">
+					<img src="assets/images/ccxl.png" />
+				</div>
+				<div class="portfolio__item col-md-4">
+					<img src="assets/images/ccxl.png" />
+				</div>
 			</div>
 		</div>
 	</section>
