--- a/dev/html/in-de-media.html
+++ b/dev/html/in-de-media.html
@@ -2,11 +2,11 @@
 @@include('components/header.html')
 
 <main class="in-de-media clearfix">
-	<header class="media__header">
+	<header class="page__header">
 		<h1>Mijns in de media</h1>
 	</header>
 	
-	<section class="media_statics container">
+	<section class="media__statics container">
 		<div class="row">
 			<div class="col-md-6">
 				<img src="assets/images/thumb.jpg" />
