--- a/dev/html/portfolio.html
+++ b/dev/html/portfolio.html
@@ -2,16 +2,208 @@
 @@include('components/header.html')
 
 <main class="portfolio clearfix">
-	<header class="media__header">
-		<h1>Portfolio</h1>
-	</header>
 	
-	<section class="media_statics container">
-		<div class="row">
-			<div class="media__numbers col-md-10">
+	<section class="portfolio__clients container">
+		<header>
+			<h1>Samenwerkingen</h1>
+		</header>
+		
+		<div class="row clients__row">
+			<div class="col-xs-12">
+				<h2>Bibliotheken <span>14</span></h2>
+			</div>
+			<div class="col-xs-3">
+				<ul>
+					<li>ProBiblio</li>
+					<li>Bibliotheek Vlissingen</li>
+					<li>Bibliotheek Oosterschelde</li>
+					<li>Bibliotheek Hoeksche Waard</li>
+					<li>Bibliotheek Westland</li>
+					<li>Bibliotheekhuis Limburg</li>
+				</ul>
+			</div>
+			<div class="col-xs-4">
+				<ul>
+					<li>NBD Biblion</li>
+					<li>Sectorinstituut Openbare Bibliotheken</li>
+					<li>Stichting Bibliotheek.nl</li>
+					<li>Zeeuwse Bibliotheek</li>
+					<li>Koninklijke Nederlandse Vereniging van Informatieprofessionals</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="row clients__row">
+			<div class="col-xs-9 col-xs-offset-3">
+				<h2>Andere bedrijven en partners <span>32</span></h2> 
+			</div>
+			<div class="col-xs-3 col-xs-offset-3">
+				<ul>
+					<li>Ministerie</li>
+					<li>JB Diesch</li>
+					<li>Rensa</li>
+					<li>Vakmedianet</li>
+					<li>Hogeschool Zeeland</li>
+					<li>Sport Zeeland</li>
+				</ul>
+			</div>
+			<div class="col-xs-3">
+				<ul>
+					<li>Brooklyn</li>
+					<li>DesignAgain</li>
+					<li>Z2 Design</li>
+					<li>een Hoog College van Staat</li>
+					<li>Essentials</li>
+				</ul>
+			</div>
+			<div class="col-xs-3">
+				<ul>
+					<li>Coers Internet Trainingen</li>
+					<li>Bouwbedrijf De Delta BV</li>
+					<li>Nedap Librix</li>
+					<li>N8vdN8 Middelburg</li>
+					<li>Woonburg</li>
+				</ul>
 			</div>
 		</div>
 	</section>
+
+	<section class="container media__items">
+		<h2>Portfolio details</h2>
+		<table class="media__table">
+			<thead>
+				<tr>
+					<th>Jaar</th>
+					<th>Type</th>
+					<th>Organisatie</th>
+					<th>Beschrijving</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Promotie uit de losse pols</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>Telefgraaf</td>
+					<td class="desc">Kroegpraat van toog naar het papier</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Tijdschrijft</td>
+					<td>Quote</td>
+					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Video</td>
+					<td>RTL</td>
+					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td>Krant</td>
+					<td>PZC</td>
+					<td class="desc">Over de rubriek 'Barcodes'</td>
+				</tr>
+			</tbody>
+		</table>
+	</section>
+	
 </main>
 
 
