--- a/dev/html/over-mij.html
+++ b/dev/html/over-mij.html
@@ -2,11 +2,11 @@
 @@include('components/header.html')
 
 <main class="over-mij clearfix">
-	<header class="media__header">
+	<header class="page__header">
 		<h1>Over Mijns</h1>
 	</header>
 	
-	<section class="media_statics container">
+	<section class="media__statics container">
 		<div class="row">
 			<div class="col-md-6">
 				<img src="assets/images/over.jpg" />
