--- a/dev/html/portfolio.html
+++ b/dev/html/portfolio.html
@@ -67,6 +67,10 @@
 		</div>
 	</section>
 
+	<section class="portfolio__divider container">
+		<div class="portfolio__divider__picture"></div>
+	</section>
+
 	<section class="container media__items">
 		<h2>Portfolio details</h2>
 		<table class="media__table">
