Opacity op de Portfolio plaat

--- a/dev/html/portfolio.html
+++ b/dev/html/portfolio.html
@@ -9,7 +9,7 @@
 		
 		<div class="row clients__row">
 			<div class="col-xs-12">
-				<h2>Bibliotheken <span>14</span></h2>
+				<h2>Bibliotheken <span>11</span></h2>
 			</div>
 			<div class="col-xs-3">
 				<ul>
@@ -34,7 +34,7 @@
 
 		<div class="row clients__row">
 			<div class="col-xs-9 col-xs-offset-3">
-				<h2>Andere bedrijven en partners <span>32</span></h2> 
+				<h2>Andere bedrijven en partners <span>16</span></h2> 
 			</div>
 			<div class="col-xs-3 col-xs-offset-3">
 				<ul>
@@ -68,7 +68,7 @@
 	</section>
 
 	<section class="portfolio__divider container">
-		<div class="portfolio__divider__picture"></div>
+		<div class="portfolio__picture"></div>
 	</section>
 
 	<section class="container media__items">
@@ -77,7 +77,6 @@
 			<thead>
 				<tr>
 					<th>Jaar</th>
-					<th>Type</th>
 					<th>Organisatie</th>
 					<th>Beschrijving</th>
 				</tr>
@@ -85,121 +84,101 @@
 			<tbody>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Promotie uit de losse pols</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>Telefgraaf</td>
 					<td class="desc">Kroegpraat van toog naar het papier</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Tijdschrijft</td>
 					<td>Quote</td>
 					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Video</td>
 					<td>RTL</td>
 					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Over de rubriek 'Barcodes'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Promotie uit de losse pols</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>Telefgraaf</td>
 					<td class="desc">Kroegpraat van toog naar het papier</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Tijdschrijft</td>
 					<td>Quote</td>
 					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Video</td>
 					<td>RTL</td>
 					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Over de rubriek 'Barcodes'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Promotie uit de losse pols</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>Telefgraaf</td>
 					<td class="desc">Kroegpraat van toog naar het papier</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Tijdschrijft</td>
 					<td>Quote</td>
 					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Video</td>
 					<td>RTL</td>
 					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Over de rubriek 'Barcodes'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Promotie uit de losse pols</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>Telefgraaf</td>
 					<td class="desc">Kroegpraat van toog naar het papier</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Tijdschrijft</td>
 					<td>Quote</td>
 					<td class="desc">In 'Hoe fysiek is de kunstbibliotheek?'</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Video</td>
 					<td>RTL</td>
 					<td class="desc">Helden: van bibliothecaris tot booming blogger</td>
 				</tr>
 				<tr>
 					<td>2015</td>
-					<td>Krant</td>
 					<td>PZC</td>
 					<td class="desc">Over de rubriek 'Barcodes'</td>
 				</tr>
