--- a/dev/html/inc/footer.html
+++ b/dev/html/inc/footer.html
@@ -23,7 +23,8 @@
 			    			<li><a href="#">Middelburg Dronk</a></li>
 			    			<li><a href="#">Veere Dronk</a></li>
 			    			<li><a href="#">Bibliotheek 2.0</a></li>
-			    			<li></li>
+			    			<li><a href="#">Open Bibliotheken</a></li>
+			    			<li><a href="#">Wiki Loves Bieb</a></li>
 			    		</ul>
 			    	</section>
 		    	</div>
