--- a/dev/html/inc/head.html
+++ b/dev/html/inc/head.html
@@ -4,6 +4,7 @@
     <title>mijnsinziens</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png"/>
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Lato:400,700,300,100,900' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
