--- a/dev/html/in-de-media.html
+++ b/dev/html/in-de-media.html
@@ -2,16 +2,13 @@
 @@include('components/header.html')
 
 <main class="in-de-media clearfix">
-	<header class="page__header">
-		<h1>Mijns in de media</h1>
-	</header>
-	
+
 	<section class="media__statics container">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-sm-5">
 				<img src="assets/images/thumb.jpg" />
 			</div>
-			<div class="media__numbers col-md-6">
+			<div class="media__numbers col-sm-6">
 				<ul>
 					<li>Schrift<span>48</span></li>
 					<li>Radio/TV<span>12</span></li>
