--- a/dev/html/inc/footer.html
+++ b/dev/html/inc/footer.html
@@ -15,6 +15,7 @@
 				<div class="row">
 			    	<section class="col-md-3 footer__section">
 						<h2 class="footer__title">Mijnsinziens</h2>
+						<p>Levert en vult websites. Schrijft. Vertelt verhalen. Adviseert. Beheert informatie.</p>
 			    	</section>
 			    	<section class="col-md-3 footer__section">
 			    		<h2 class="footer__title">Ed elders</h2>
