--- a/dev/html/over-mij.html
+++ b/dev/html/over-mij.html
@@ -1,20 +1,19 @@
 @@include('inc/head.html')
 @@include('components/header.html')
 
-<main class="over-mij clearfix">
-	<header class="page__header">
-		<h1>Over Mijns</h1>
-	</header>
-	
-	<section class="media__statics container">
+<main class="about clearfix">
+	<section class="container">
 		<div class="row">
-			<div class="col-md-6">
-				<img src="assets/images/over.jpg" />
+			<div class="col-sm-4 col-sm-offset-1 about__image">
+				<img src="assets/images/profielfoto.JPG"/>
 			</div>
-			<div class="media__numbers col-md-6">
-				<p>Edwin Mijnsbergen (Vlissingen, 1971) belandde in 2000 in de bibliotheekwereld. Na de studie Informatiedienstverlening en -Management (IDM) in 2005, legde hij de nadruk op digitale ontwikkelingen in het algemeen en sociale netwerken in het bijzonder. In april 2010 nam hij afscheid van zijn vaste baan als bibliothecaris bij de Zeeuwse Bibliotheek om zich zelfstandig, onder de naam M.I. Webwerk, te richten op o.a. internetprojecten en -adviezen, communitybeheer, contentmanagement, journalistiek en nieuwe media. Edwin publiceert dagelijks op zijn weblog Mijns Inziens en is initiatiefnemer van websites als Platform Informatieprofessionals (voorheen Bibliotheek 2.0), Middelburg Dronk, Wij zijn De Stad en Ik geef weg-Walcheren. Als u of uw organisatie behoefte heeft aan expertise en advies rondom community-, informatie- en contentmanagement, internet en internettoepassingen, of zoekt naar iemand die sociale media voor u beheert, dan wel de gewenste basis legt op dat gebied, dan is Edwin u graag van dienst. En jazeker: aan een nieuwe of verbeterde website kan hij u ook helpen. Zie ook het video-interview met Michael Minneboo.</p>
+			<div class="col-sm-6 about__content">
+				<h1 class="about__title">Edwin Mijnsbergen</h1>
+				<p>Edwin Mijnsbergen (Vlissingen, 1971) belandde in 2000 in de bibliotheekwereld. Na de studie Informatiedienstverlening en -Management (IDM) in 2005, legde hij de nadruk op digitale ontwikkelingen in het algemeen en sociale netwerken in het bijzonder. In april 2010 nam hij afscheid van zijn vaste baan als bibliothecaris bij de Zeeuwse Bibliotheek om zich zelfstandig, onder de naam M.I. Webwerk, te richten op o.a. internetprojecten en -adviezen, communitybeheer, contentmanagement, journalistiek en nieuwe media. Edwin publiceert dagelijks op zijn weblog Mijns Inziens en is initiatiefnemer van websites als Platform Informatieprofessionals (voorheen Bibliotheek 2.0), Middelburg Dronk, Wij zijn De Stad en Ik geef weg-Walcheren.</p>
+				<p>Als u of uw organisatie behoefte heeft aan expertise en advies rondom community-, informatie- en contentmanagement, internet en internettoepassingen, of zoekt naar iemand die sociale media voor u beheert, dan wel de gewenste basis legt op dat gebied, dan is Edwin u graag van dienst. En jazeker: aan een nieuwe of verbeterde website kan hij u ook helpen. Zie ook het video-interview met Michael Minneboo.</p>
 			</div>
 		</div>
+	
 	</section>
 </main>
 
