--- a/dev/html/portfolio.html
+++ b/dev/html/portfolio.html
@@ -8,10 +8,10 @@
 		</header>
 		
 		<div class="row clients__row">
-			<div class="col-xs-12">
+			<div class="col-sm-12">
 				<h2>Bibliotheken <span>11</span></h2>
 			</div>
-			<div class="col-xs-3">
+			<div class="col-sm-3">
 				<ul>
 					<li>ProBiblio</li>
 					<li>Bibliotheek Vlissingen</li>
@@ -21,7 +21,7 @@
 					<li>Bibliotheekhuis Limburg</li>
 				</ul>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-sm-4">
 				<ul>
 					<li>NBD Biblion</li>
 					<li>Sectorinstituut Openbare Bibliotheken</li>
@@ -33,10 +33,10 @@
 		</div>
 
 		<div class="row clients__row">
-			<div class="col-xs-9 col-xs-offset-3">
+			<div class="col-sm-9 col-sm-offset-3">
 				<h2>Andere bedrijven en partners <span>16</span></h2> 
 			</div>
-			<div class="col-xs-3 col-xs-offset-3">
+			<div class="col-sm-3 col-sm-offset-3">
 				<ul>
 					<li>Ministerie</li>
 					<li>JB Diesch</li>
@@ -46,7 +46,7 @@
 					<li>Sport Zeeland</li>
 				</ul>
 			</div>
-			<div class="col-xs-3">
+			<div class="col-sm-3">
 				<ul>
 					<li>Brooklyn</li>
 					<li>DesignAgain</li>
@@ -55,7 +55,7 @@
 					<li>Essentials</li>
 				</ul>
 			</div>
-			<div class="col-xs-3">
+			<div class="col-sm-3">
 				<ul>
 					<li>Coers Internet Trainingen</li>
 					<li>Bouwbedrijf De Delta BV</li>
@@ -72,7 +72,7 @@
 	</section>
 
 	<section class="container media__items">
-		<h2>Portfolio details</h2>
+		<h2>Details</h2>
 		<table class="media__table">
 			<thead>
 				<tr>
