--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -1,6 +1,6 @@
 @@include('inc/head.html')
 @@include('components/header.html')
-<main class="container">
+<main class="container blog">
 	<div class="row">
 		<section class="articles col-md-8">
 			<article class="article">
